<resources>
    <string name="app_name">PrintBox</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="print_twoside">Печать с двух сторон</string>
    <string name="print_color">Цвет печати: Ч/Б</string>
    <string name="menu_one">1</string>
    <string name="menu_two">2</string>
    <string name="menu_three">3</string>
    <string name="menu_one_text">Выбери файл</string>
    <string name="menu_two_text">Опции</string>
    <string name="menu_balance">Current balance</string>
    <string name="menu_three_text">Посмотреть историю</string>
    <string name="order_printed">Распечатано</string>
    <string name="back_press_retry">Нажмите еще раз для выхода из приложения</string>
    <string name="printer_not_choise">Принтер не выбран</string>


    <!-- Auth Activity -->
    <string name="auth_activity_title">Авторизация</string>
    <string name="auth_activity_button">Войти</string>
    <string name="auth_activity_login">Логин</string>
    <string name="auth_activity_password">Пароль</string>
    <string name="auth_activity_password_repeat">Повторите пароль</string>
    <string name="auth_activity_auth_error">Ошибка авторизации</string>
    <string name="auth_activity_register_error">Ошибка регистрации</string>
    <string name="auth_activity_email">E-Mail</string>
    <string name="auth_activity_login_empty">Логин не может быть пустым</string>
    <string name="auth_activity_login_matcher">Логин должен содержать только буквы латинского алфавита и цифры</string>
    <string name="auth_activity_password_empty">Пароль не может быть пустым</string>
    <string name="auth_activity_password_matcher">Пароль должен иметь минимум 8 символа и иметь хотя бы одну букву</string>
    <string name="auth_activity_password_match_repeat">Пароли не совпадают</string>
    <string name="auth_activity_email_empty">Почта не может быть пустой</string>
    <string name="auth_activity_email_matcher">Введите валидный адрес (например example@printbox.io)</string>
    <string name="auth_register_password_repeat_login">Пароль не должен повторять логин</string>
    <string name="auth_register">Зарегистрироваться</string>
    <string name="auth_already_register">Я уже зарегистрировался</string>
    <string name="auth_vk">Войти через ВКонтакте</string>
    <string name="auth_vk_fail">Ошибка</string>
    <string name="auth_logout">Выйти</string>
    <string name="register_activity_title">Регистрация</string>

    <!-- Files -->
    <string name="files_update_error">Ошибка получения файлов</string>
    <string name="files_processing">Вы не можете печатать файл, который обрабатывается. Дождитесь обработки</string>
    <string name="files_title">Мои файлы</string>
    <string name="files_select_button">Выберите документ</string>
    <string name="files_select_notfound">Мы не нашли у вас файловый менеджер. Пожалуйста, установите файловый менеджер, который поддерживает выбор файлов для продолжения</string>
    <string name="files_upload_progress">Загрузка файла</string>
    <string name="files_upload_canceled">Загрузка файла прервана</string>
    <string name="files_upload_progress_details">Пожалуйста, подождите</string>
    <string name="files_upload_finished">Файл загружен успешно</string>
    <string name="files_upload_failed">Ошибка загрузки файла</string>
    <string name="files_empty">У вас еще нет файлов. Загрузите файл, чтобы продолжить</string>

    <!-- Map -->
    <string name="map_location_access_fail">Мы не сможем получить доступ к локации без разрешения</string>
    <string name="map_printer_error">Ошибка получения списка принтеров</string>
    <string name="map_draft_error">Ошибка сохранения</string>
    <string name="map_select_unavailable_error">Вы не можете выбрать недоступный принтер</string>

    <!-- Intro Activity -->
    <string name="intro_next">Далее</string>
    <string name="intro_ready">Вперед!</string>
    <string name="intro_back">Назад</string>
    <string name="intro_skip">Пропустить</string>
    <string name="intro_welcome">Добро пожаловать в PrintBox!</string>
    <string name="intro_content_description">Изображение с описанием возможностей приложения</string>
    <string name="intro_one">Зарегистрируйся</string>
    <string name="intro_two">Пополни счет</string>
    <string name="intro_three">Загрузи документ</string>
    <string name="intro_four">Выбери опции</string>
    <string name="intro_five">Забери документ</string>
    <string name="intro_six">Спрашивай!</string>

    <!-- Main Activity -->
    <string name="home_title">Главная</string>

    <!-- Pay and profile -->
    <string name="pay_title">Пополнить баланс</string>
    <string name="pay_finish">Оплата прошла успешно!</string>
    <string name="pay_total" formatted="false">Текущий баланс: %.2f руб</string>
    <string name="pay_exit">На главную</string>
    <string name="pay_request_title">Пополнить баланс</string>
    <string name="pay_default">50</string>
    <string name="pay_large_than">Сумма должна быть больше 10</string>
    <string name="pay_request_not_empty">Сумма не может быть пустой или невалидной!</string>

    <string name="view_balance">%.2f руб</string>

    <!-- Options -->
    <string name="option_file_size_template" formatted="false">%d стр.</string>
    <string name="option_selection_one">Не печатать с двух сторон</string>
    <string name="option_selection_two_up">Печатать с двух сторон (Переплет сверху)</string>
    <string name="option_selection_two">Печатать с двух сторон</string>
    <string name="option_balance_hint">Минимальная сумма - 10 руб</string>
    <string name="option_print_error">Ошибка при запросе. Простите, отчет об ошибке отправлен разработчикам</string>
    <string name="options_filled_perc" formatted="false">Среднее заполнение: %.1f%%</string>
    <string name="options_price" formatted="false">Стоимость печати: %.2f * (x%d) = %.2f руб</string>
    <string name="options_price_waiting">Вычисление стоимости печати…</string>
    <string name="options_not_balance">Пополните баланс!</string>
    <string name="options_done">Печатать!</string>
    <string name="options_balance"><![CDATA[>>]]></string>
    <string name="options_balance_none">Недостаточно средств на счету!</string>
    <string name="options_amount">Количество:</string>

    <!-- History -->
    <string name="history_request_error">Ошибка при запросе. Простите, отчет об ошибке отправлен разработчикам</string>
    <string name="history_item_price" formatted="false">%.2f руб.</string>
    <string name="history_item_pages" formatted="false">%d стр.</string>
    <string name="history_item_copies" formatted="false">%d экз.</string>
</resources>
