<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <Button
        android:id="@+id/menu_one"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/menu_button_active"
        android:text="@string/menu_one"
        app:layout_constraintEnd_toEndOf="@id/text_menu_one"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/menu_devider_one"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/menu_one"
        app:layout_constraintEnd_toStartOf="@id/menu_two"
        app:layout_constraintStart_toEndOf="@id/menu_one"
        app:layout_constraintTop_toTopOf="@id/menu_one" />

    <Button
        android:id="@+id/menu_two"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/menu_button_disactive"
        android:clickable="false"
        android:focusable="false"
        android:text="@string/menu_two"
        app:layout_constraintBottom_toBottomOf="@id/menu_one"
        app:layout_constraintEnd_toStartOf="@id/menu_devider_two"
        app:layout_constraintStart_toEndOf="@id/menu_devider_one"
        app:layout_constraintTop_toTopOf="@id/menu_one" />

    <View
        android:id="@+id/menu_devider_two"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/menu_one"
        app:layout_constraintEnd_toStartOf="@id/menu_three"
        app:layout_constraintStart_toEndOf="@id/menu_two"
        app:layout_constraintTop_toTopOf="@id/menu_one" />

    <Button
        android:id="@+id/menu_three"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/menu_button_active"
        android:text="@string/menu_three"
        app:layout_constraintBottom_toBottomOf="@id/menu_one"
        app:layout_constraintEnd_toEndOf="@id/text_menu_three"
        app:layout_constraintStart_toStartOf="@id/text_menu_three"
        app:layout_constraintTop_toTopOf="@id/menu_one" />

    <TextView
        android:id="@+id/text_menu_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_one_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_one" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_two_text"
        app:layout_constraintEnd_toEndOf="@id/menu_two"
        app:layout_constraintStart_toStartOf="@id/menu_two"
        app:layout_constraintTop_toBottomOf="@id/menu_two" />

    <TextView
        android:id="@+id/text_menu_three"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/menu_three_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menu_three" />

</android.support.constraint.ConstraintLayout>

