<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_activity_title"
            android:textSize="32sp"
            android:theme="@style/AppTheme.Lobster" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/auth_activity_login"
                android:inputType="text"
                android:textColor="@color/white"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/errorLoginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorError"
                android:textStyle="bold"
                android:visibility="gone"
                tools:text="Error" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/auth_activity_email"
                android:inputType="textEmailAddress"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/errorEmailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorError"
                android:textStyle="bold"
                android:visibility="gone"
                tools:text="Error" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/white"
                android:hint="@string/auth_activity_password"
                android:inputType="textPassword"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/errorPasswordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorError"
                android:textStyle="bold"
                android:visibility="gone"
                tools:text="Error" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/register_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button_disactive"
                android:text="@string/auth_register" />

            <include
                android:id="@+id/vkauth"
                layout="@layout/item_vkbutton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/authbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/auth_already_register" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>