<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/print_preview"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/icon_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_location_point"
        app:layout_constraintEnd_toStartOf="@+id/print_name"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/print_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toBottomOf="@+id/icon_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_location"
        app:layout_constraintTop_toBottomOf="@id/print_preview"
        app:layout_constraintTop_toTopOf="@id/icon_location"
        tools:text="МГТУ - Технопарк" />

    <ImageView
        android:id="@+id/icon_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_print_file"
        app:layout_constraintBottom_toBottomOf="@id/file_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/file_name" />

    <TextView
        android:id="@+id/file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/icon_file"
        app:layout_constraintTop_toBottomOf="@id/icon_location"
        tools:text="Тестовый файл.odt" />

    <TextView
        android:id="@+id/file_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/icon_file"
        app:layout_constraintStart_toStartOf="@id/file_name"
        app:layout_constraintTop_toBottomOf="@id/file_name"
        tools:text="46,3kb" />

    <Switch
        android:id="@+id/select_twoside"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/print_twoside"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/file_size" />


    <Switch
        android:id="@+id/select_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/print_color"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/select_twoside" />

    <TextView
        android:id="@+id/text_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options_amount"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/select_count"
        app:layout_constraintEnd_toStartOf="@id/select_count"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/select_count" />

    <com.shawnlin.numberpicker.NumberPicker
        android:id="@+id/select_count"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_count"
        app:layout_constraintTop_toBottomOf="@id/select_color"
        app:np_dividerColor="@color/colorPrimary"
        app:np_min="1"
        app:np_orientation="horizontal"
        app:np_selectedTextColor="@color/colorPrimary"
        app:np_selectedTextSize="24sp"
        app:np_textColor="@color/colorPrimary"
        app:np_textSize="24sp" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/no_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_count">

        <TextView
            android:id="@+id/text_balance_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/options_balance_none"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/line_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />

        <EditText
            android:id="@+id/balance_add"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edittext_left"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:paddingBottom="3dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:paddingTop="3dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@id/line_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_balance_out" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext_right"
            android:gravity="center"
            android:text="@string/options_balance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/line_button"
            app:layout_constraintTop_toTopOf="@id/balance_add" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/filled_perc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/options_filled_perc"
        app:layout_constraintTop_toBottomOf="@id/no_money" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options_price"
        app:layout_constraintTop_toBottomOf="@id/filled_perc" />

    <Button
        android:id="@+id/ready"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button_disactive"
        android:text="@string/options_not_balance"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/price" />

</android.support.constraint.ConstraintLayout>